# dagpipe

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
dagpipe/: __init__.py  errors.py  pipeline.py  task_core.py  task_decorators.py  task_params.py  typing.py  utils.py  visualization.py
lazy_pipe/: __init__.py  pipeline.py  task_core.py  task_decorators.py  visualization.py
notebooks/: args_uniforming.ipynb  poc.ipynb  tests_validation.ipynb  tutorial.ipynb
tests/: test_pipeline.py
tests_/: tasks_setup.py  test_pipeline.py
