[build-system]
requires = ["hatchling", "graphviz", "matplotlib"]
build-backend = "hatchling.build"

[project]
name = "lazy_pipe"
version = "0.0.1"
authors = [
  { name="Wojciech Bogobowicz", email="wojciech.bogobowicz@gmail.com" },
]
description = "Package that allows user to define lazy evaluated pipeline."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/WojciechBogobowicz/lazy_pipe"
